client/src/App.scss
/* Imports */
@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");

/* CSS reset */
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.todo__content {
  &.dark {
    --Blue-500: hsl(220, 98%, 61%);
    --Navy-950: hsl(235, 21%, 11%);
    --Navy-900: hsl(235, 24%, 19%);
    --Purple-300: hsl(234, 39%, 85%);
    --Purple-100-hover: hsl(236, 33%, 92%);
    --Purple-600: hsl(235, 16%, 43%);
    --Purple-700: hsl(233, 14%, 35%);
    --Purple-800: hsl(237, 14%, 26%);
    --Gray-600: hsl(236, 9%, 61%);

    --text-color: hsl(0, 0%, 98%);
  }

  &.light {
    --Gray-50: hsl(0, 0%, 98%);
    --Purple-300: hsl(234, 39%, 85%);
    --Gray-300: hsl(233, 11%, 84%);
    --Gray-600: hsl(236, 9%, 61%);
    --Navy-850: hsl(235, 19%, 35%);

    --text-color: hsl(235, 21%, 11%);
  }
}

img {
  height: 100%;
  display: block;
}

/* Global Styles */
body {
  background: #fafafa url("../design/images/bg-desktop-dark.jpg") no-repeat;
  background-size: cover;
  font-family: "Josefin Sans", sans-serif;
  font-size: 18px;
  display: flex;
  align-items: center;
  justify-content: center;
}

body:has(.todo__content.dark) {
  background-color: #181824;
}

.todo {
  &__content {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 500px;
  }

  // Header Section
  &__header {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  &__title {
    text-transform: uppercase;
    color: var(--text-color);
    letter-spacing: 8px;
  }

  &__theme-switch {
    color: var(--text-color);

    svg {
      width: 30px;
      height: 30px;
    }

    &:hover {
      cursor: pointer;
    }
  }

  // Input For Adding a TODO
  &__add-todo {
    width: 100%;
    display: flex;
    gap: 15px;
    margin: 8px 0;
    margin-top: 40px;
    padding: 12px;
    border-radius: 5px;
    background: var(--Navy-900);
  }

  &__add-btn {
    width: 20px;
    height: 20px;
    border-radius: 100vw;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    border: none;
    background: transparent;
    border: 1px solid var(--Gray-600);
    cursor: pointer;

    &--hover {
      background: linear-gradient(
        135deg,
        hsl(192, 100%, 67%),
        hsl(280, 87%, 65%)
      );
    }
  }

  &__add-input {
    width: 100%;
    background: transparent;
    outline: none;
    border: none;
  }

  &__todo-list {
    height: 500px;
    display: flex;
    flex-direction: column;
    background: var(--Navy-900);
    border-radius: 5px;
    margin: 16px 0;
    overflow-y: auto;

    &::-webkit-scrollbar {
      display: none;
    }
  }

  &__todo-item {
    min-height: 50px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding: 8px;
  }

  &__todo-content {
    display: flex;
    gap: 10px;
  }

  &__todo-remove {
    cursor: pointer;
  }
}

